--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		<p align="center">
 		<font face="Arial">
 		<img border="0" src="me.jpg" width="192" height="256"></font></td>
-		<td ><b> <span class="STYLE7">Zou Liang, Ph.D</span><span lang="zh-cn"  class="STYLE8"> 邹亮</span></b>
+		<td ><b> <span class="STYLE7">Zou Liang, Ph.D</span><span lang="zh-cn"  class="STYLE8"> 邹亮（中共党员）</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">副教授</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">中国矿业大学</span></p>
-		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for Multimedia and Networking(UBC) & VIDA lab(NYU) </span></p>
-        <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">2388 Madison Avenue, Burnaby, BC, V5K 0C8, Canada</span></p>
-        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel: (1)236-513-0316</span></p>
-        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com"> jianzhelin@ece.ubc.ca; jianzhelin@nyu.edu</span></p>
+		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">信息与控制工程学院，副教授，硕士生导师</span></p>
+        <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">江苏省徐州市大学路1号中国矿业大学南湖校区</span></p>
+        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">联系方式: (+86)139-5517-9802</span></p>cumt.edu.cn
+        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:liangzou@cumt.edu.cn"> liangzou@cumt.edu.cn</span></p>
 		 <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mycv.pdf">CV</a></p>
         <span id="idJsShow"></span>
 		</p>       
