--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">江苏省徐州市大学路1号中国矿业大学南湖校区</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">联系方式: (+86)139-5517-9802</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:liangzou@cumt.edu.cn"> liangzou@cumt.edu.cn</span></p>
-		 <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mycv.pdf">CV</a></p>
+		 <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="CV_Liang_CUMT2020.pdf">CV</a></p>
         <span id="idJsShow"></span>
 		</p>       
 		
