--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<p align="center">
 		<font face="Arial">
 		<img border="0" src="me.jpg" width="192" height="256"></font></td>
-		<td ><b> <span class="STYLE7">Zou Liang, Ph.D</span><span lang="zh-cn"  class="STYLE8"> 邹亮（中共党员）</span></b>
+		<td ><b> <span class="STYLE7">邹亮，博士后</span><span lang="zh-cn"  class="STYLE8"> 中国党员</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">副教授</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">中国矿业大学</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">信息与控制工程学院，副教授，硕士生导师</span></p>
