--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
  <table border="0" align="center" width="100%" >
  <tr width="100%" >
      <td align="center">
-     	<span class="TabList">[<a href="#News">News</a>]</span>
+     	<span class="TabList">[<a href="#教育及工作经历">教育及工作经历</a>]</span>
      </td>
      <td align="center">
-     	<span class="TabList">[<a href="#Education">Education</a>]</span>
+     	<span class="TabList">[<a href="#研究方向">研究方向</a>]</span>
      </td>
      <td align="center">
-     	<span class="TabList">[<a href="#ResearchInterests">Research Interests</a>]</span>
+     	<span class="TabList">[<a href="#主持/参与科研项目">主持/参与科研项目</a>]</span>
      </td>
      <td align="center">
-     	<span class="TabList">[<a href="#Publications">Publications</a>]</span>
+     	<span class="TabList">[<a href="#学术/社会兼职">学术/社会兼职</a>]</span>
      </td>
      <td align="center">
-     	<span class="TabList">[<a href="#Patents">Patents</a>]</span>
+     	<span class="TabList">[<a href="#发明专利及软著">发明专利及软著</a>]</span>
                        </td>
      <td align="center">
-     	<span class="TabList">[<a href="#HighlightedProjects">Highlighted Projects</a>]</span>
+     	<span class="TabList">[<a href="#部分期刊论文">部分期刊论文</a>]</span>
      </td>
      <td  align="center">
-     	<span class="TabList">[<a href="#HonorsandCertificates">Honors and Certificates</a>]</span>
+     	<span class="TabList">[<a href="#科研团队">科研团队</a>]</span>
      </td>
 	 <td align="center">
-     	<span class="TabList">[<a href="#SkillsandStudentTitles">Skills and Titles</a>]</span>
+     	<span class="TabList">[<a href="#供后期添加">供后期添加</a>]</span>
      </td>
      </tr>
  </table>
@@ -73,28 +73,36 @@
  <div id="main-wrap">
 	<div class="container">
 		<div id="wsite-content" class="wsite-elements wsite-not-footer">
- <h2 id="News" style="text-align:left; padding-top:20px;"><span class="STYLE10">News</span></h2>
+ <h2 id="News" style="text-align:left; padding-top:20px;"><span class="STYLE10">教育及工作经历</span></h2>
 <table border="0" width="900" id="table2" >
 <tr>
-		<td class="STYLE11" width="180">•	2020-09-15</td>
-		<td class="STYLE12">I join VIDA lab <a href="https://vida.engineering.nyu.edu/"> as a Post Doctoral Associate.</a></td>
+		<td class="STYLE11" width="180">•	2019/05 - 至今</td>
+		<td class="STYLE12">中国矿业大学信息与控制工程学院<a href="http://siee.cumt.edu.cn/">，副教授，硕士生导师</a></td>
 	</tr>
 <tr>
 <tr>
-		<td class="STYLE11" width="180">•	2020-09-01</td>
-		<td class="STYLE12">I work as a Post Doctoral Faculty in Electrical and Computer Engineering department. I work closely with Prof. Rabab Ward <a href="https://ipl.ece.ubc.ca/"></a></td>
+		<td class="STYLE11" width="180">•	2018/06 - 2018/08</td>
+		<td class="STYLE12">南洋理工大学（新加坡）计算机科学与工程学院（LILY Lab）<a href="http://www.coe.ntu.edu.sg/aboutus/Schools/Pages/SCSE.aspx">，客座研究员</a></td>
 	</tr>
 <tr>
-		<td class="STYLE11" width="180">•	2020-05-01~08-31</td>
-		<td class="STYLE12">I work as a postgraduate research assistant in Robotics and Control lab, under supervision of Prof. Purang Abolmaesumi <a href="https://www.ece.ubc.ca/faculty/purang-abolmaesumi"></a></td>
+		<td class="STYLE11" width="180">•	2018/03 - 2019/04</td>
+		<td class="STYLE12">安徽大学电子信息工程学院<a href="http://dy.ahu.edu.cn/">，副教授，硕士生导师</a></td>
 	</tr>
 		<tr>
-		<td class="STYLE11" width="180">•	2020-05-04</td>
-		<td class="STYLE12">I get my Ph.D. degree from Electrical and Computer Engineering Department, University of British Columbia! Thanks to my supervisor Z. Jane Wang <a href="https://www.ece.ubc.ca/faculty/jane-z-wang"></a>.</td>
+		<td class="STYLE11" width="180">•	2017/09 - 2018/03</td>
+		<td class="STYLE12">不列颠哥伦比亚大学 & 皇后大学（加拿大）电气与计算机工程系<a href="https://www.ece.ubc.ca/">，博士后 合作导师：加拿大首席科学家 Dr. Purang Abolmaesumi</a>.</td>
 	</tr>
 	<tr>
-		<td class="STYLE11" width="200">•	2019-06-17~20-02-01</td>
-		<td class="STYLE12">I finished my internship in Siemens healthineer company. I worked closely with Dr. Rui Liao <a href="https://scholar.google.com/citations?user=gvXcgBQAAAAJ&hl=en"></a>.</td>
+		<td class="STYLE11" width="200">•	2013/08 - 2017/09</td>
+		<td class="STYLE12">不列颠哥伦比亚大学（加拿大）电气与计算机工程<a href="https://www.ece.ubc.ca/">，博士 导师：加拿大工程院院士、IEEE Fellow Dr. Z. Jane Wang</a>.</td>
+	</tr>
+	<tr>
+		<td class="STYLE11" width="200">•	2010/08 - 2013/08</td>
+		<td class="STYLE12">中国科学技术大学生物医学工程<a href="https://biox.ustc.edu.cn/swyxgc/list.htm">，硕士 </a>.</td>
+	</tr>
+	<tr>
+		<td class="STYLE11" width="200">•	2006/09 - 2010/06</td>
+		<td class="STYLE12">安徽大学微电子<a href="http://dy.ahu.edu.cn/">，学士 </a>.</td>
 	</tr>
 </table>   
         
