--- a/index.html
+++ b/index.html
@@ -77,32 +77,32 @@
 <table border="0" width="900" id="table2" >
 <tr>
 		<td class="STYLE11" width="180">•	2019/05 - 至今</td>
-		<td class="STYLE12"><a href="http://siee.cumt.edu.cn/">中国矿业大学信息与控制工程学院，副教授，硕士生导师</a></td>
+		<td class="STYLE12"><a href="http://siee.cumt.edu.cn/">中国矿业大学信息与控制工程学院</a>，副教授，硕士生导师</td>
 	</tr>
 <tr>
 <tr>
 		<td class="STYLE11" width="180">•	2018/06 - 2018/08</td>
-		<td class="STYLE12"><a href="http://www.coe.ntu.edu.sg/aboutus/Schools/Pages/SCSE.aspx">南洋理工大学（新加坡）计算机科学与工程学院（LILY Lab），客座研究员</a></td>
+		<td class="STYLE12"><a href="http://www.coe.ntu.edu.sg/aboutus/Schools/Pages/SCSE.aspx">南洋理工大学（新加坡）计算机科学与工程学院（LILY Lab）</a>，客座研究员</td>
 	</tr>
 <tr>
 		<td class="STYLE11" width="180">•	2018/03 - 2019/04</td>
-		<td class="STYLE12"><a href="http://dy.ahu.edu.cn/">安徽大学电子信息工程学院，副教授，硕士生导师</a></td>
+		<td class="STYLE12"><a href="http://dy.ahu.edu.cn/">安徽大学电子信息工程学院</a>，副教授，硕士生导师</td>
 	</tr>
 		<tr>
 		<td class="STYLE11" width="180">•	2017/09 - 2018/03</td>
-		<td class="STYLE12"><a href="https://www.ece.ubc.ca/">不列颠哥伦比亚大学 & 皇后大学（加拿大）电气与计算机工程系，博士后 合作导师：加拿大首席科学家 Dr. Purang Abolmaesumi</a>.</td>
+		<td class="STYLE12"><a href="https://www.ece.ubc.ca/">不列颠哥伦比亚大学 & 皇后大学（加拿大）电气与计算机工程系</a>，博士后 合作导师：加拿大首席科学家 Dr. Purang Abolmaesumi</td>
 	</tr>
 	<tr>
 		<td class="STYLE11" width="200">•	2013/08 - 2017/09</td>
-		<td class="STYLE12"><a href="https://www.ece.ubc.ca/">不列颠哥伦比亚大学（加拿大）电气与计算机工程，博士 导师：加拿大工程院院士、IEEE Fellow Dr. Z. Jane Wang</a>.</td>
+		<td class="STYLE12"><a href="https://www.ece.ubc.ca/">不列颠哥伦比亚大学（加拿大）电气与计算机工程</a>，博士 导师：加拿大工程院院士、IEEE Fellow Dr. Z. Jane Wang</td>
 	</tr>
 	<tr>
 		<td class="STYLE11" width="200">•	2010/08 - 2013/08</td>
-		<td class="STYLE12"><a href="https://biox.ustc.edu.cn/swyxgc/list.htm">中国科学技术大学生物医学工程，硕士 </a>.</td>
+		<td class="STYLE12"><a href="https://biox.ustc.edu.cn/swyxgc/list.htm">中国科学技术大学生物医学工程</a>，硕士</td>
 	</tr>
 	<tr>
 		<td class="STYLE11" width="200">•	2006/09 - 2010/06</td>
-		<td class="STYLE12"><a href="http://dy.ahu.edu.cn/">安徽大学微电子，学士 </a>.</td>
+		<td class="STYLE12"><a href="http://dy.ahu.edu.cn/">安徽大学微电子</a>，学士</td>
 	</tr>
 </table>   
         
