--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
  <div id="main-wrap">
 	<div class="container">
 		<div id="wsite-content" class="wsite-elements wsite-not-footer">
- <h2 id="News" style="text-align:left; padding-top:20px;"><span class="STYLE10">教育及工作经历</span></h2>
+ <h2 id="教育及工作经历" style="text-align:left; padding-top:20px;"><span class="STYLE10">教育及工作经历</span></h2>
 <table border="0" width="900" id="table2" >
 <tr>
 		<td class="STYLE11" width="180">•	2019/05 - 至今</td>
@@ -109,15 +109,41 @@
 
 
 
-<h2 id="ResearchInterests" style="text-align:left; padding-top:20px;"><span class="STYLE10">Research Interests</span></h2>
-	<p class="STYLE11">Computer vision, pattern recognition, machine learning methods on different types of images/video, including:</p>
-	<table border="0" width="900" id="table2" >
+<h2 id="研究方向" style="text-align:left; padding-top:20px;"><span class="STYLE10">研究方向</span></h2>
+	<p class="STYLE11">机器学习与人工智能，统计信号处理，图像处理等</p>
+			
+ <h2 id="主持/参与科研项目" style="text-align:left; padding-top:20px;"><span class="STYLE10">主持/参与科研项目</span></h2>
+<table border="0" width="900" id="table2" >
+<ol style="margin-left:2em">
 	<tr>
-		<td class="STYLE16" width="5">•</td>
-		<td class="STYLE17">remote sensing images, medical images, RGB/RGB-D images etc.</td>
+	    <td class="STYLE11"><a><img src="chart4.jpg" class="publogo" width="256" height="128"></a></td>
+		<td class="STYLE12"><strong><a itemprop="name">生理信号的欠定联合盲源分离研究</a></strong><br><span itemprop="description">主持，国家自然科学基金</span></td>
 	</tr>
+	<tr>
+		<td class="STYLE11"><a><img src="chart3.jpg" class="publogo" width="256" height="128"></a></td>
+		<td class="STYLE12"><strong><a itemprop="name">面向生理信号的欠定联合盲源分离关键技术研究</a></strong><br><span itemprop="description"> 主持，江苏省自然科学青年基金</span></td>
+	</tr>
+	<tr>
+		<td class="STYLE11"><a><img src="chart2.jpg" class="codelogo" width="256" height="96"></a></td>
+		<td class="STYLE12"><p><strong><a itemprop="name">基于机器学习的音谱转换方法研究</a><br></strong><span itemprop="description">主持，Google 产学合作专业综合改革项目，已结题</span></td>
+	</tr>
+	<tr>
+		<td class="STYLE11"><a><img src="flowchart.jpg" class="codelogo" width="256" height="96"></a></td>
+		<td class="STYLE12"><p><strong><a itemprop="name">高通量煤质数据的特征信息捕捉及其建模中的关键技术研究</a></strong><br><span itemprop="description">主持，中央高校基本科研业务费专项资金</span></td>
+	</tr>
+	<tr>
+		<td class="STYLE11"><a><img src="chart1.jpg" class="codelogo" width="256" height="96"></a></td>
+		<td class="STYLE12"><p><strong><a itemprop="name">智能多模态生鲜肉高通量品质鉴定系统研发</a></strong><br><span itemprop="description">主持，合肥市留学回国人员创新创业择优资助，已结题</span></td>
+	</tr>
+	<tr>
+		<td class="STYLE11"><a><img src="chart1.jpg" class="codelogo" width="256" height="96"></a></td>
+		<td class="STYLE12"><p><strong><a itemprop="name">Sparse Signal Processing and Modeling of High Dimensional Spatial-Temporal Data</a></strong><br><span itemprop="description">参与，加拿大自然科学与工程研究委员会基金</span></td>
+	</tr>
+</ol>
+<p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>	
 </table>
 
+ 
 <h2 id="Publications" style="text-align:left; padding-top:20px;"><span class="STYLE10">Publications</span></h2>
 <ol style="margin-left:2em">    
 	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> vol. 54, no. 3, pp. 1431-1445, 2016.(SCI, IF:3.514)<a href="TGRS2016.pdf"> [PDF] </a></li>
@@ -135,34 +161,7 @@
 </ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
- <h2 id="Highlighted Projects" style="text-align:left; padding-top:20px;"><span class="STYLE10">Highlighted Projects</span></h2>
-<table border="0" width="900" id="table2" >
-<ol style="margin-left:2em">
-	<tr>
-	    <td class="STYLE11"><a><img src="chart4.jpg" class="publogo" width="256" height="128"></a></td>
-		<td class="STYLE12"><strong><a itemprop="name">Theory and Application for Precision Processing and Intelligent Spatial Information Transformation of High Resolution Remote Sensing Satellite Data</a></strong><br><span itemprop="description">Key Project of Chinese National Programs for Fundamental Research and Development, Team leader.</span></td>
-	</tr>
-	<tr>
-		<td class="STYLE11"><a><img src="chart3.jpg" class="publogo" width="256" height="128"></a></td>
-		<td class="STYLE12"><strong><a itemprop="name">In defense of Iterated Conditional Modes method</a></strong><br><span itemprop="description">Mainly focus on the Markov Random Fields related paradigm, which involves a demanding energy minimization procedure.</span></td>
-	</tr>
-	<tr>
-		<td class="STYLE11"><a><img src="chart2.jpg" class="codelogo" width="256" height="96"></a></td>
-		<td class="STYLE12"><p><strong><a itemprop="name">Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</a><br></strong><span itemprop="description">Have tackled the inherent drawbacks of clustering based band selection method through a new framework concerning on dual clustering;.</span></td>
-	</tr>
-	<tr>
-		<td class="STYLE11"><a><img src="flowchart.jpg" class="codelogo" width="256" height="96"></a></td>
-		<td class="STYLE12"><p><strong><a itemprop="name">Band selection by mainfold ranking</a></strong><br><span itemprop="description">Can the salient bands be highlighted by mainfold ranking? </span></td>
-	</tr>
-	<tr>
-		<td class="STYLE11"><a><img src="chart1.jpg" class="codelogo" width="256" height="96"></a></td>
-		<td class="STYLE12">    <p><strong><a itemprop="name">Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</a></strong><br><span itemprop="description">A novel spectral-spatial classification scheme is proposed; mainly focuses on multi-task joint sparse representation and a stepwise markov random filed framework.</span></td>
-	</tr>
-</ol>
-<p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>	
-</table>
 
- 
 
 <h2 id="HonorsandCertificates" style="text-align:left; padding-top:20px;"><span class="STYLE10">Honors and Certificates</span></h2>
 	<table border="0" width="900" id="table2" >
