--- a/index.html
+++ b/index.html
@@ -143,8 +143,28 @@
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>	
 </table>
 
+<h2 id="学术/社会兼职" style="text-align:left; padding-top:20px;"><span class="STYLE10">学术/社会兼职</span></h2>
+	<table border="0" width="900" id="table2" >
+
+		<tr>
+			<td class="STYLE11" width="180">•	大温地区公派学生学者联合会主席 (2014/10 - 2017/10)</td>
+		</tr>		
+		<tr>
+			<td class="STYLE11" width="180">•	国际学术期刊客座编委 (Journal of Healthcare Engineering)</td>
+		</tr>
+		<tr>
+			<td class="STYLE11" width="180">•	国际 SCI 期刊审稿人（IEEE TSP, IEEE TCASII, IEEE TSMCS, IEEE ACCESS, IEEE SPL 等）</td>
+		</tr>
+		<tr>
+			<td class="STYLE11" width="180">•	国际学术会议 (EI检索)技术委员会委员 (KDBD2020, ICCSE2018, ICAA2018, SNCC2017, IWCMC2017等)</td>
+		</tr>
+
+	</table>
+
  
-<h2 id="Publications" style="text-align:left; padding-top:20px;"><span class="STYLE10">Publications</span></h2>
+			
+			
+<h2 id="发明专利及软著" style="text-align:left; padding-top:20px;"><span class="STYLE10">发明专利及软著</span></h2>
 <ol style="margin-left:2em">    
 	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> vol. 54, no. 3, pp. 1431-1445, 2016.(SCI, IF:3.514)<a href="TGRS2016.pdf"> [PDF] </a></li>
 	<li class="STYLE13">Q. Wang(supervisor), <b>J. Lin</b>, and Y. Yuan, "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking," <i>IEEE Transactions on Neural Networks and Learning Systems (IEEE),</i> vol. 27, no. 6, pp. 1279-1289, 2016.(SCI, IF：4.291)<a href="TNN2016.pdf"> [PDF] </a></li>
@@ -155,56 +175,13 @@
 
 
 
-<h2 id="Patents" style="text-align:left; padding-top:20px;"><span class="STYLE10">Patents</span></h2>
+<h2 id="部分期刊论文" style="text-align:left; padding-top:20px;"><span class="STYLE10">部分期刊论文</span></h2>
 <ol style="margin-left:2em">
 	<li class="STYLE13">Y. Yuan, Q. Wang, and <b>J. Lin</b>, “Dual Clustering Based Hyperspectral Image Band Selection via Neighborhood System Analysis,” 201510072842.2, 2015.</li>
 </ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
 
-
-<h2 id="HonorsandCertificates" style="text-align:left; padding-top:20px;"><span class="STYLE10">Honors and Certificates</span></h2>
-	<table border="0" width="900" id="table2" >
-
-		<tr>
-			<td class="STYLE11" width="180">•	2013</td>
-			<td class="STYLE12">Individual Scholarship</td>
-		</tr>		
-		<tr>
-			<td class="STYLE11" width="180">•	2012</td>
-			<td class="STYLE12">National Computer Rank Examination (certificate of level 4): Network Engineering</td>
-		</tr>
-		<tr>
-			<td class="STYLE11" width="180">•	2011</td>
-			<td class="STYLE12">National Computer Rank Examination (certificate of level 3): Software Engineering</td>
-		</tr>
-		<tr>
-			<td class="STYLE11" width="180">•	2009</td>
-			<td class="STYLE12">Individual Scholarship</td>
-		</tr>
-
-	</table>
-<p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
-
-<p class="STYLE11"><b>Membership:</b></p>
-	<p class="STYLE14">•	IEEE Student Member</p>
-	
-<p class="STYLE11"><b>Program Committee Member:</b></p>
-	<p class="STYLE14">•	the International Joint Conference on Artificial Intelligence(IJCAI)</p>
-
-<p class="STYLE11"><b>Regular Reviewer：</b></p>
-    <p class="STYLE14">•	IEEE Transactions on Intelligent Transportation Systems(ITIS)</p>
-    <p class="STYLE14">•	Computer Vision and Image Understanding(CVIU)</p>
-    <p class="STYLE14">•	Pattern Recoginition(PR)</p>
-    <p class="STYLE14">•	the European Signal Processing Conference 2016 (Eusipco 2016)</p>
-    <p class="STYLE14">•	the Pacific Rim International Conferences on Artificial Intelligence 2016 (PRICAI 2016)</p>
-    <p class="STYLE14">•	the International Conference on Image and Signal Processing 2016 (ICISP 2016)</p>
-	<p class="STYLE14">•	the International Conference on Swarm Intelligence (ICSI 2016)</p>
-	<p class="STYLE14">•	Neurocomputing (Elsevier)</p>
-	<p class="STYLE14">•	Pattern Recognition (Elsevier)</p>
-    <p class="STYLE14">•	IEEE Transactions on Cybernetics (IEEE)</p>	
-	<p class="STYLE14">•	Big Data Analytics (Bio-Med Central / Springer)</p>	
-<p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
 
 <h2 id="SkillsandStudentTitles" style="text-align:left; padding-top:20px;"><span class="STYLE10">Skills and Student Titles</span></h2>
