--- a/index.html
+++ b/index.html
@@ -165,17 +165,33 @@
 			
 			
 <h2 id="发明专利及软著" style="text-align:left; padding-top:20px;"><span class="STYLE10">发明专利及软著</span></h2>
-<ol style="margin-left:2em">    
-	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> vol. 54, no. 3, pp. 1431-1445, 2016.(SCI, IF:3.514)<a href="TGRS2016.pdf"> [PDF] </a></li>
-	<li class="STYLE13">Q. Wang(supervisor), <b>J. Lin</b>, and Y. Yuan, "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking," <i>IEEE Transactions on Neural Networks and Learning Systems (IEEE),</i> vol. 27, no. 6, pp. 1279-1289, 2016.(SCI, IF：4.291)<a href="TNN2016.pdf"> [PDF] </a></li>
+<table border="0" width="900" id="table2" >
+
+		<tr>
+			<td class="STYLE11" width="180">•基于帧差法与 3D 卷积神经网络的矿井水泵房漏水检测方法 (排名第一，实审，201910624327.9)</td>
+		</tr>		
+		<tr>
+			<td class="STYLE11" width="180">•基于图像分割和分类的煤岩显微组分智能识别方法 (排名第一，实审，201910714652.4)</td>
+		</tr>
+		<tr>
+			<td class="STYLE11" width="180">•基于核函数优化的甘草近红外光谱分析模型构建方法及甘草质量评价方法 (排名第三，实审，201910546901.3)</td>
+		</tr>
+		<tr>
+			<td class="STYLE11" width="180">•基于计算机视觉的矿车字符检测与识别软件 V1.0 (排名第五，2020SR0248029)</td>
+		</tr>
+</table>
+	
+
+
+
+<h2 id="部分期刊论文" style="text-align:left; padding-top:20px;"><span class="STYLE10">部分期刊论文</span></h2>	
+	<ol style="margin-left:2em">    
+	<li class="STYLE13"><b>[IEEE J. ] L Zou</b>, X Zhu, C Wu, Y Liu, L Qu, Spectral-Spatial exploration for hyperspectral image classification via the fusion of Fully Convolutional Networks, <i>IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing</i> , 2020, 13, 659-674. (中科院 2 区)</li>
+	<li class="STYLE13"><b>[MDPI J. ]</b>L Qu, C Wu, <b>L Zou∗</b>, 3D Dense Separated Convolution Module for Volumetric Medical Image Analysis<i>, Applied Sciences,</i> 2020, 10(2), 485. (中科院 3 区)</li>
 	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization,” <i>IEEE Transactions on Cybernetics (IEEE),</i> vol. 46, no. 12, pp. 2966-2976, 2016.(SCI, IF:3.469)<a href="TCYB2016.pdf"> [PDF] </a></li>
 	<li class="STYLE13"><b>J. Lin</b>, Q. Wang, and Y. Yuan, “In Defense of Iterated Conditional Mode for Hyperspectral Image Classification,” <i>IEEE International Conference on Multimedia and Expo (IEEE),</i> pp. 1-6, 2014.(EI, accept rate=29.7%)<a href="icme2014.pdf"> [PDF] </a></li>	
 </ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
-
-
-
-<h2 id="部分期刊论文" style="text-align:left; padding-top:20px;"><span class="STYLE10">部分期刊论文</span></h2>
 <ol style="margin-left:2em">
 	<li class="STYLE13">Y. Yuan, Q. Wang, and <b>J. Lin</b>, “Dual Clustering Based Hyperspectral Image Band Selection via Neighborhood System Analysis,” 201510072842.2, 2015.</li>
 </ol>
