--- a/index.html
+++ b/index.html
@@ -188,8 +188,10 @@
 	<ol style="margin-left:2em">    
 	<li class="STYLE13"><b>[IEEE J. ] L Zou</b>, X Zhu, C Wu, Y Liu, L Qu, Spectral-Spatial exploration for hyperspectral image classification via the fusion of Fully Convolutional Networks, <i>IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing,</i> 2020, 13, 659-674. (中科院 2 区)</li>
 	<li class="STYLE13"><b>[MDPI J. ] </b>L Qu, C Wu, <b>L Zou∗</b>, 3D Dense Separated Convolution Module for Volumetric Medical Image Analysis<i>, Applied Sciences,</i> 2020, 10(2), 485. (中科院 3 区)</li>
-	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization,” <i>IEEE Transactions on Cybernetics (IEEE),</i> vol. 46, no. 12, pp. 2966-2976, 2016.(SCI, IF:3.469)<a href="TCYB2016.pdf"> [PDF] </a></li>
-	<li class="STYLE13"><b>J. Lin</b>, Q. Wang, and Y. Yuan, “In Defense of Iterated Conditional Mode for Hyperspectral Image Classification,” <i>IEEE International Conference on Multimedia and Expo (IEEE),</i> pp. 1-6, 2014.(EI, accept rate=29.7%)<a href="icme2014.pdf"> [PDF] </a></li>	
+	<li class="STYLE13"><b>[IEEE J. ] L Zou</b>, X Chen, G Dang, Y Guo, ZJ Wang, Removing Muscle Artifacts from Simulated EEG data via Underdetermined Joint Blind Source Separation, <i>IEEE Transactions on Circuits and Systems—II: Express Briefs,</i> 2019, 67(1), 187-191. (中科院 2 区)</li>	
+	<li class="STYLE13"><b>[MDPI J. ] </b>H Wang, M Lei, M Li, Y Chen, J Jiang, <b>L Zou∗</b>, Intelligent Estimation of Vitrinite Reflectance of Coal from Photomicrographs Based on Machine Learning, <i>Energies,</i> 2019, 12(20), 3855. (中科院 3 区)</li>
+	<li class="STYLE13"><b>[MDPI J. ] </b>M Lei, Z Rao, M Li, X Yu, <b>L Zou∗</b>, Identification of Coal Geographical Origin Using Near Infrared Sensor Based on Broad Learning, <i>Applied Sciences, </i> 2019, 9(6), 1111. (中科院 3 区)</li>
+	<li class="STYLE13"><b>[IEEE J. ] L Zou</b>, X Chen, G Dang, Y Guo, ZJ Wang, Removing Muscle Artifacts from Simulated EEG data via Underdetermined Joint Blind Source Separation, <i>IEEE Transactions on Circuits and Systems—II: Express Briefs,</i> 2019, 67(1), 187-191. (中科院 2 区)</li>
 </ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 <ol style="margin-left:2em">
