--- a/index.html
+++ b/index.html
@@ -191,12 +191,8 @@
 	<li class="STYLE13"><b>[IEEE J. ] L Zou</b>, X Chen, G Dang, Y Guo, ZJ Wang, Removing Muscle Artifacts from Simulated EEG data via Underdetermined Joint Blind Source Separation, <i>IEEE Transactions on Circuits and Systems—II: Express Briefs,</i> 2019, 67(1), 187-191. (中科院 2 区)</li>	
 	<li class="STYLE13"><b>[MDPI J. ] </b>H Wang, M Lei, M Li, Y Chen, J Jiang, <b>L Zou∗</b>, Intelligent Estimation of Vitrinite Reflectance of Coal from Photomicrographs Based on Machine Learning, <i>Energies,</i> 2019, 12(20), 3855. (中科院 3 区)</li>
 	<li class="STYLE13"><b>[MDPI J. ] </b>M Lei, Z Rao, M Li, X Yu, <b>L Zou∗</b>, Identification of Coal Geographical Origin Using Near Infrared Sensor Based on Broad Learning, <i>Applied Sciences, </i> 2019, 9(6), 1111. (中科院 3 区)</li>
-	<li class="STYLE13"><b>[IEEE J. ] L Zou</b>, X Chen, G Dang, Y Guo, ZJ Wang, Removing Muscle Artifacts from Simulated EEG data via Underdetermined Joint Blind Source Separation, <i>IEEE Transactions on Circuits and Systems—II: Express Briefs,</i> 2019, 67(1), 187-191. (中科院 2 区)</li>
-</ol>
-<p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
-<ol style="margin-left:2em">
-	<li class="STYLE13">Y. Yuan, Q. Wang, and <b>J. Lin</b>, “Dual Clustering Based Hyperspectral Image Band Selection via Neighborhood System Analysis,” 201510072842.2, 2015.</li>
-</ol>
+	<li class="STYLE13"><b>[IEEE J. ] </b> Z Yu, A Li, <b>L Zou∗</b>, X Sun, M Wang, P Zha. Integrated Modeling of GC-Content, Mappability, Tumor Impurity and Aneuploidy for Accurate Detection of Genomic Aberrations, <i>IEEE Access</i>, 2018, 6, 64096-64106. (中科院 2 区)</li>
+	</ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
 
