--- a/index.html
+++ b/index.html
@@ -192,13 +192,27 @@
 	<li class="STYLE13"><b>[MDPI J. ] </b>H Wang, M Lei, M Li, Y Chen, J Jiang, <b>L Zou∗</b>, Intelligent Estimation of Vitrinite Reflectance of Coal from Photomicrographs Based on Machine Learning, <i>Energies,</i> 2019, 12(20), 3855. (中科院 3 区)</li>
 	<li class="STYLE13"><b>[MDPI J. ] </b>M Lei, Z Rao, M Li, X Yu, <b>L Zou∗</b>, Identification of Coal Geographical Origin Using Near Infrared Sensor Based on Broad Learning, <i>Applied Sciences, </i> 2019, 9(6), 1111. (中科院 3 区)</li>
 	<li class="STYLE13"><b>[IEEE J. ] </b> Z Yu, A Li, <b>L Zou∗</b>, X Sun, M Wang, P Zha. Integrated Modeling of GC-Content, Mappability, Tumor Impurity and Aneuploidy for Accurate Detection of Genomic Aberrations, <i>IEEE Access</i>, 2018, 6, 64096-64106. (中科院 2 区)</li>
+	<li class="STYLE13"><b>[IET J. ] </b>J Zheng, <b>L Zou∗</b1>, ZJ Wang. Mid-level deep food part mining for food image recognition, <i>IET Computer Vision</i>, 2018, 12-3, 298-304. (中科院 4 区)</li>
+	<li class="STYLE13"><b>[IEEE J. ] </b>L Zhao, Z Chen, Y Yang, L Zou, ZJ Wang. ICFS Clustering With Multiple Representatives for Large Data, IEEE Transactions on Neural Networks and Learning Systems, 2018, 30(3), 728-738. (中科院 1 区)
+	<li class="STYLE13"><b>[IEEE J. ] </b>X Jin, Y Su, <b>L Zou</b>, Y Wang, P Jing, ZJ Wang. Sparsity-Based Image Inpainting Detection via Canonical Correlation Analysis With Low-Rank Constraints, <i>IEEE Access</i>, 2018, 49967-49978. (中科院 2 区)</li>	
+	<li class="STYLE13"><b>[Elsevier J. ] </b>X Wang, Y Ma, Y Cheng, <b>L Zou</b>, J Rodrigues. Heterogeneous Domain Adaptation Network based on Autoencoder, <i>Journal of Parallel and Distributed Computing</i>, 2018, 117, 281-291. (中科院 3 区)</li>
+	<li class="STYLE13"><b>[MDPI J. ] L Zou</b>, C Ge, Z Wang, E Cretu, X Li, Novel tactile sensor technology and smart tactile sensing systems: A review, <i>Sensors</i>, 2017, 17-11, 2653. (中科院 2 区)</li>
+	<li class="STYLE13"><b>[Nature J. ] </b>Y Hu, <b>L Zou</b>, X Lu. Detection and quantification of offal content in ground beef meat using vibrational spectroscopic-based chemometric analysis, <i>Scientific Reports</i>, 2017, 7 (1), 15162. (中科院 3 区)</li>
+	<li class="STYLE13"><b>[IEEE J. ]  L Zou</b>, J Zheng, C Miao, M J. McKeown, Z. J Wang. 3D CNN based Automatic Diagnosis of Attention Deficit Hyperactivity Disorder Using Functional and Structural MRI, <i>IEEE ACCESS</i>, 2017, 5, 23626-23636. (中科院 2 区)</li>	
+	<li class="STYLE13"><b>[Springer J. ] </b>X Chen, A Liu, Q Chen, Y Liu, <b>L Zou</b>, M J. McKeown. Simultaneous Ocular and Muscle Artifact Removal from EEG Data by Exploiting Diverse Statistics, <i>Computers in Biology and Medicine</i>, 2017, 88:1-10. (中科院 3 区)</li>
+	<li class="STYLE13"><b>[IEEE J. ] L Zou</b>, X Chen, X Ji, Z. J Wang. Underdetermined Joint Blind Source Separation of Multiple Datasets, <i>IEEE ACCESS</i>, 2017, 5, 7474-7487. (中科院 2 区)</li>
+	<li class="STYLE13"><b>[MDPI J. ] </b>A Servati, <b>L Zou</b>, Z. J Wang, F Ko, P Servati. Novel Flexible Wearable Sensor Materials and Signal Processing for Vital Sign and Human Activity Monitoring, <i>Sensors</i>, 2017, 17-7, 1622. (中科院 2 区)</li>
+	<li class="STYLE13"><b>[IEEE J. ] L Zou</b>, X Chen, Z. J Wang. Underdetermined Joint Blind Source Separation for 2 datasets based on Tensor Decomposition, <i>IEEE Signal Processing Letters</i>, 2016, 23-5, 673-677. (中科院 2 区)</li>	
+	<li class="STYLE13"><b>[IEEE J. ] L Zou</b>, X Chen, A Servati, P Servati, Z. J Wang. A Blind Source Separation Framework for Monitoring Heart Beat Rate using Nanofiber based Strain Sensors, <i>IEEE Sensors Journal</i>, 2015, 16-3, 762-772. (中科院 2 区)</li>
+	<li class="STYLE13"><b>[BMC J. ] L Zou</b>, M Wang, Y Shen, J Liao, A Li, M Wang. PKIS: Computational Identification of Protein Kinases for Experimentally Discovered Protein Phosphorylation Sites, BMC Bioinformatics, 2013, 14:247. (中科院 4 区)</li>
+	<li class="STYLE13"><b>[Springer J. ] L Zou</b>, Q Huang, A Li, M Wang. A genome-wide association study of Alzheimer’s disease using random forests and enrichment analysis, Sci China Life Sci, 2012, 55-7: 618–625. (中科院 1 区)</li>
 	</ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
 
 
 
-<h2 id="SkillsandStudentTitles" style="text-align:left; padding-top:20px;"><span class="STYLE10">Skills and Student Titles</span></h2>
+<h2 id="科研团队" style="text-align:left; padding-top:20px;"><span class="STYLE10">科研团队</span></h2>
     <p class="STYLE15">•	Program: Proficient in <i>Matlab, AI, LaTex</i>, grasp <i>C/C++, PS, OpenGL, github, HTML5</i></p>
     <p class="STYLE15">•	<i>Monitor of grade 2013</i></p>   
     <p class="STYLE15">•	<i>Teaching Assistant for CPEN 211, 09/01/2016-12/30/2016</i></p>   
